--- a/tmux.conf
+++ b/tmux.conf
@@ -33,3 +33,7 @@ set-window-option -g window-status-current-style fg=colour223 # fg=bg1
 set-option -g pane-active-border-style fg=colour250 #fg2
 set-option -g pane-border-style fg=colour223 #bg1
 
+set-option -sg escape-time 10
+set-option -g focus-events on
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
