--- a/.config/i3/config
+++ b/.config/i3/config
@@ -146,6 +146,8 @@ bindsym $mod+c [title="DevTools"] scratchpad show
 bindsym $mod+p exec ~/.config/i3/screen.sh
 exec --no-startup-id ~/.fehbg &
 exec_always --no-startup-id picom
+exec --no-startup-id ~/.fehbg &
+exec --no-startup-id pasystray
 
 #Hide window title bar
 # default_border pixel 1
