--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -28,6 +28,7 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
+bind-key / copy-mode \; send-key ?
 
 # switch windows alt+number
 bind-key -n M-0 select-window -t 0
