--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -46,8 +46,12 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind s split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+
 # clear screen
 bind C-l send-keys 'C-l'
+
+bind o command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind k confirm kill-session
 
 set-option -g status-position top
 
