--- a/dot_config/tmuxinator/BE.yml
+++ b/dot_config/tmuxinator/BE.yml
@@ -11,6 +11,6 @@ windows:
         - django:
           - docker compose down
           - docker compose up -d
-          - poetry run ./manage.py runserver
+          - poetry run ./manage.py runserver 0.0.0.0:8000
         - consumer:
           - poetry run ./manage.py command -c robot.robot_async_workers
