--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -46,6 +46,8 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 bind s split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+bind -n M-Up switch-client -n
+bind -n M-Down switch-client -p
 
 # clear screen
 bind C-l send-keys 'C-l'
@@ -79,3 +81,6 @@ set-option -g focus-events on
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+
+# this line to display image
+set -gq allow-passthrough on
