--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -83,4 +83,6 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 # this line to display image
-set -gq allow-passthrough on
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
