--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,27 +1,65 @@
+# ======================
+# General Configuration
+# ======================
 set -g mouse on
+set -g focus-events on
+set -sg escape-time 10
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+set -g status-position top
 
-# tmux.conf
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+# ======================
+# Window/Pane Management
+# ======================
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+bind s split-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 
-# decide whether we're in a Vim process
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# Quick window switching
+bind -n M-0 select-window -t 0
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+
+# Session management
+bind o command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind k confirm kill-session
+bind -n M-Up switch-client -n
+bind -n M-Down switch-client -p
+
+# Clear screen
+bind C-l send-keys 'C-l'
+
+# ======================
+# Vim-Tmux Navigation
+# ======================
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
 
+# Handle different tmux versions for C-\ binding
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
-
+# Copy-mode navigation
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
@@ -30,59 +68,33 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 bind-key / copy-mode \; send-key ?
 
-# switch windows alt+number
-bind-key -n M-0 select-window -t 0
-bind-key -n M-1 select-window -t 1
-bind-key -n M-2 select-window -t 2
-bind-key -n M-3 select-window -t 3
-bind-key -n M-4 select-window -t 4
-bind-key -n M-5 select-window -t 5
-bind-key -n M-6 select-window -t 6
-bind-key -n M-7 select-window -t 7
-bind-key -n M-8 select-window -t 8
-bind-key -n M-9 select-window -t 9
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-bind s split-window -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
-bind -n M-Up switch-client -n
-bind -n M-Down switch-client -p
-
-# clear screen
-bind C-l send-keys 'C-l'
-
-bind o command-prompt -p "New Session:" "new-session -A -s '%%'"
-bind k confirm kill-session
-
-set-option -g status-position top
-
-## COLORSCHEME: gruvbox dark (medium)
+# ======================
+# Theme/Colors
+# ======================
 set-option -g status "on"
 
-# default statusbar color
-set-option -g status-style fg=colour223 # bg=bg1, fg=fg1
+# Status bar
+set-option -g status-style fg=colour223
 
-# default window title colors
-set-window-option -g window-status-style fg=colour223 # bg=yellow, fg=bg1
+# Window titles
+set-window-option -g window-status-style fg=colour223
+set-window-option -g window-status-activity-style bg=colour237,fg=colour223
+set-window-option -g window-status-current-style fg=colour223
 
-# default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour223 # bg=bg1, fg=fg3
+# Pane borders
+set-option -g pane-active-border-style fg=colour250
+set-option -g pane-border-style fg=colour223
 
-# active window title colors
-set-window-option -g window-status-current-style fg=colour223 # fg=bg1
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour223 #bg1
-
-set-option -sg escape-time 10
-set-option -g focus-events on
-
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
-
-# this line to display image
-set -g allow-passthrough on
-set -ga update-environment TERM
-set -ga update-environment TERM_PROGRAM
+# ======================
+# Popup Windows
+# ======================
+bind C-y display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazygit"
+bind C-q display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazydocker"
+bind C-n display-popup -E 'bash -i -c "read -p \"Session name: \" name; tmux new-session -d -s \$name && tmux switch-client -t \$name"'
+bind C-p display-popup -E "ipython3"
+bind C-o display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "zsh -i -c 'node'"
+bind C-e display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "yazi"
+bind C-z display-popup -w 80% -h 80% -E 'nvim ~/.zshrc'
+bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
+bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind C-s display-popup -E "tmux list-windows | fzf --reverse | awk '{print $1}' | sed 's/:.*//' | xargs tmux select-window -t"
