--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -75,6 +75,7 @@ set-option -g status "on"
 
 # Status bar
 set-option -g status-style fg=colour223
+set -g status-right "#(echo '#{pane_current_path}' | sed 's#$HOME#~#; s#\\([^/]*/[^/]*/\\).*\\(/[^/]*/.*\\)$#\\1 ... \\2#; s#/# > #g')"
 
 # Window titles
 set-window-option -g window-status-style fg=colour223
@@ -95,6 +96,6 @@ bind C-p display-popup -E "ipython3"
 bind C-o display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "zsh -i -c 'node'"
 bind C-e display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "yazi"
 bind C-z display-popup -w 80% -h 80% -E 'nvim ~/.zshrc'
-bind C-t display-popup -d "#{pane_current_path}" -w 75% -h 75% -E "zsh"
+bind C-t run-shell "~/.config/tmux/scratchpad.sh"
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 bind C-s display-popup -E "tmux list-windows | fzf --reverse | awk '{print $1}' | sed 's/:.*//' | xargs tmux select-window -t"
