feat: update fzf

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -91,11 +91,15 @@ set-option -g pane-border-style fg=colour223
 # ======================
 bind C-y display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazygit"
 bind C-q display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "lazydocker"
-bind C-n display-popup -E 'bash -i -c "read -p \"Session name: \" name; tmux new-session -d -s \$name && tmux switch-client -t \$name"'
+bind C-n display-popup -E "$SHELL -i -c 'read -p \"Session name: \" name; tmux new-session -d -s \$name && tmux switch-client -t \$name'"
 bind C-p display-popup -E "ipython3"
-bind C-o display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "zsh -i -c 'node'"
+bind C-o display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "$SHELL -i -c 'node'"
 bind C-e display-popup -d "#{pane_current_path}" -w 90% -h 90% -E "yazi"
 bind C-z display-popup -w 80% -h 80% -E 'nvim ~/.zshrc'
 bind C-t run-shell "~/.config/tmux/scratchpad.sh"
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 bind C-s display-popup -E "tmux list-windows | fzf --reverse | awk '{print $1}' | sed 's/:.*//' | xargs tmux select-window -t"
+
+# ~/.tmux.conf
+
+bind C-w display-popup -E -w 80% -h 60% -T "FZF Commands" "$SHELL -i -c $HOME/.config/tmux/tmux-fzf-commands.sh"
