--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -27,3 +27,8 @@ opacity = 0.95
 transparent_background_colors = true
 draw_bold_text_with_bright_colors = true
 primary.background = "#1F1F28" # Kanagawa default background color
+
+[keyboard]
+bindings = [
+	{ key = "Space", mods = "Control", chars = "\u0000" },
+]
