--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -75,7 +75,6 @@ set-option -g status "on"
 
 # Status bar
 set-option -g status-style fg=colour223
-set -g status-right "#(echo '#{pane_current_path}' | sed 's#$HOME#~#; s#\\([^/]*/[^/]*/\\).*\\(/[^/]*/.*\\)$#\\1 ... \\2#; s#/# > #g')"
 
 # Window titles
 set-window-option -g window-status-style fg=colour223
@@ -99,7 +98,37 @@ bind C-z display-popup -w 80% -h 80% -E 'nvim ~/.zshrc'
 bind C-t run-shell "~/.config/tmux/scratchpad.sh"
 bind C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 bind C-s display-popup -E "tmux list-windows | fzf --reverse | awk '{print $1}' | sed 's/:.*//' | xargs tmux select-window -t"
+bind r run-shell -b "~/.tmux/plugins/tmux-fzf/scripts/pane.sh switch"
 
 # ~/.tmux.conf
 
-bind C-w display-popup -E -w 80% -h 60% -T "FZF Commands" "$SHELL -i -c $HOME/.config/tmux/tmux-fzf-commands.sh"
+# bind C-r display-popup -E -w 80% -h 60% -T "FZF Commands" "$SHELL -i -c $HOME/.config/tmux/tmux-fzf-commands.sh"
+# bind C-r run-shell "$HOME/.config/tmux/tmux-fzf-commands.sh"
+
+set -g @plugin 'sainnhe/tmux-fzf'
+TMUX_FZF_PANE_FORMAT="[#{window_name}] #{pane_current_command} #{pane_current_path}"
+TMUX_FZF_MENU=\
+"Reload tmux config\nsource-file ~/.tmux.conf; display-message 'Config Reloaded!'\n"\
+"Open nvim config\nnvim ~/.config/nvim/init.lua\n"\
+"Show disk usage\ndf -h | less\n"\
+"Show processes\nhtop\n"\
+"Show IP address\nip addr show | less\n"\
+"Show used port\nss -tulpn | less\n"\
+"FE-BRAVO\nsmug start trading-ui\n"\
+"FE-CHARLIE\nsmug start c-trading-ui\n"\
+"GW-CHARLIE\nsmug start c-rest-gw\n"\
+"GW-BRAVO\nsmug start rest-gw\n"\
+"lazy-git\nlazygit\n"\
+"lazy-docker\nlazydocker\n"
+TMUX_FZF_MENU_POPUP=1
+TMUX_FZF_MENU_POPUP_WIDTH=90%
+TMUX_FZF_MENU_POPUP_HEIGHT=90%
+TMUX_FZF_ORDER="menu|command|session|window|pane|keybinding|clipboard|process"
+
+# set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g status-right 'CPU: #{cpu_percentage} RAM: #{ram_percentage}'
+
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g status-right "#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2)"
+
+run '~/.tmux/plugins/tpm/tpm'
