--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,6 +10,7 @@ set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 set -g status-position top
+set -g default-command "$SHELL"
 
 # ======================
 # Window/Pane Management
@@ -119,16 +120,26 @@ TMUX_FZF_MENU=\
 "GW-CHARLIE\nsmug start c-rest-gw\n"\
 "GW-BRAVO\nsmug start rest-gw\n"\
 "lazy-git\nlazygit\n"\
-"lazy-docker\nlazydocker\n"
+"lazy-docker\nlazydocker\n"\
+"Reset jdtls\nrm -rf ~/.cache/jdtls/\n"
 TMUX_FZF_MENU_POPUP=1
 TMUX_FZF_MENU_POPUP_WIDTH=90%
 TMUX_FZF_MENU_POPUP_HEIGHT=90%
 TMUX_FZF_ORDER="menu|command|session|window|pane|keybinding|clipboard|process"
 
-# set -g @plugin 'tmux-plugins/tmux-cpu'
-# set -g status-right 'CPU: #{cpu_percentage} RAM: #{ram_percentage}'
+# ======================
+# Status Bar
+# ======================
+# Set status bar update interval to 1 second (for the clock)
+set -g status-interval 1
 
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g status-right "#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --interval 2)"
+# Plugin for RAM/CPU (This one is more stable and works with tmux format)
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g status-right-length 70
 
-run '~/.tmux/plugins/tpm/tpm'
+# Status bar right: [CPU] [RAM] | [Date] [Clock]
+# This method uses tmux's own format strings. It will not fight or disappear.
+set -g status-right "CPU: #{cpu_percentage} RAM: #{ram_percentage} | %Y-%m-%d %H:%M:%S "
+
+
+run -b '~/.tmux/plugins/tpm/tpm'
