--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,6 +1,7 @@
 # ======================
 # General Configuration
 # ======================
+set-window-option -g mode-keys vi
 set -g mouse on
 set -g focus-events on
 set -sg escape-time 10
