--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -22,6 +22,9 @@ bind c new-window -c "#{pane_current_path}"
 bind s split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 
+# opencode new line
+bind -n S-Enter send-keys "\u001b[13;2u"
+
 # Quick window switching
 bind -n M-0 select-window -t 0
 bind -n M-1 select-window -t 1
